--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.1",
+    "bootstrap": "^3.4.1",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
@@ -58,5 +59,5 @@
     "react-router-dom": "^5.2.0",
     "typescript": "^4.1.3"
   },
-  "proxy": "http://localhost:5000" 
+  "proxy": "http://localhost:5000"
 }
