--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-datepicker": "^3.4.0",
     "react-google-login": "^5.2.1",
     "react-scripts": "4.0.1",
     "ts-node": "^9.1.1",
@@ -55,7 +54,7 @@
     "@types/node": "^12.19.11",
     "@types/react": "^16.14.2",
     "http-proxy-middleware": "^0.19.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.4.3",
     "react-router-dom": "^5.2.0",
     "typescript": "^4.1.3"
   },
